# tlow

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOnnxRuntime.cmake
include/: CMakeLists.txt
include/tlow/Codegen/: KernelRegistry.h
include/tlow/Dialect/: CMakeLists.txt  TlowDialect.h  TlowDialect.td  TlowOps.h  TlowOps.td
include/tlow/Importer/: OnnxImporter.h
include/tlow/Runtime/: Allocator.h  Allocators.h  Arena.h  Edge.h  Graph.h  Node.h  Optimizers.h  PagePool.h  Regions.h  Tensor.h
include/tlow/Transforms/: PatternRegistry.h
lib/: CMakeLists.txt
lib/Codegen/: CMakeLists.txt
lib/Codegen/Common/: CMakeLists.txt
lib/Codegen/Targets/ASIC/: CMakeLists.txt
lib/Codegen/Targets/CPU/: CMakeLists.txt
lib/Codegen/Targets/GPU/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt  TlowDialect.cpp  TlowOps.cpp
lib/Frontend/: CMakeLists.txt
lib/Importer/: CMakeLists.txt
lib/Runtime/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt
test/: matmul.mlir
tools/: CMakeLists.txt
tools/tlow/: CMakeLists.txt  main.cpp
tools/tlow-opt/: CMakeLists.txt  main.cpp
